Edited all unit tests and Finnhub integration test